# goggles

./: .gitignore  .goggles-default.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  commitlint.config.mjs  pyproject.toml  pytest.ini  setup.py
.agent/rules/: rules.md
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: audit.yaml  code-style.yaml  codeql.yaml  commit-lint.yaml  copilot-instructions.md  release.yaml  test.yaml
docs/: index.md
docs/agents/: implementer.md  reviewer.md
docs/guides/: agent-development.md  architecture.md  contributing.md  environment-variables.md  transport.md
docs/retrospectives/: 2026-04-shutdown-bye-flush.md  README.md
docs/standards/: api-design.md  change-scope.md  code-clarity.md  code-organization.md  code-quality.md  environment-tooling.md  jax-numerical.md  linting-formatting.md  testing.md  typing-docstrings.md  version-control.md
docs/workflows/: api-validation.md  bugfix.md  docs.md  feature.md  orientation.md  refactor.md
examples/: 01_basic_run.py  02_bound_logger.py  02_multi_scope.py  03_jsonl_usage.py  03_local_storage.py  04_metrics_and_wandb.py  04_wandb.py  04_warnings_capture.py  05_metrics_helpers.py  05_wandb_multiple_runs.py  06_custom_handler.py  07_library_vs_app.py  07_wandb.py  08_artifacts.py  08_dedicated_host.py  09_custom_step_axis.py  100_interrupt.py  101_config.py  102_decorators.py  103_history.py  104_filters.py  105_benchmark.py  106_log_levels.py  107_push_images.py  108_class_level_logger.py  200_debug_socket_logs.py  README.md  _benchmark_handlers.py  config.py  decorators.py  default.py  example_config.yaml  history.py  interrupt.py  logger_file_terminal.py  logger_wandb.py  shutdown.py  time.py  video.py  workers.py
examples/06_library_vs_app/: app.py  app_goggles.py  app_no_goggles.py  lib_module.py  lib_module_goggles.py  lib_module_no_goggles.py
examples/conf/: config.yaml
examples/conf/preset/: image_sweep.yaml  scalar_10khz.yaml  scalar_1khz.yaml  scalar_30hz.yaml  scalar_long.yaml  scalar_max.yaml  video_long.yaml  video_sweep.yaml
goggles/: __init__.py  api.py  config.py  decorators.py  filters.py  legacy.py  logger.py  media.py  severity.py  shutdown.py  types.py  utils.py  validation.py
goggles/_core/: config.py  config_simple.py  decorators.py  eventbus.py  host.py  integrations.py  logger.py  routing.py  run.py  transport.py  utils.py
goggles/_core/integrations/: __init__.py  _step_guard.py  console.py  jsonl.py  storage.py  wandb.py
goggles/_core/metrics/: event.py  materializer.py  queue.py
goggles/_core/transport/: __init__.py  _endpoints.py  _frames.py  _iox.py  _local.py  _protocol.py
goggles/history/: README.md  __init__.py  buffer.py  spec.py  types.py  utils.py
scripts/: check_docstrings.py
subissues/: 00_structured_metrics.md  01_event_schema_and_validation.md  02_staging_queue_and_policies.md  03_materializer_worker.md  04_sink_handlers.md  05_integration_with_logger_and_run.md  06_thin_wrappers.md  07_config_routing_and_defaults.md  08_observability.md  09_tests_and_examples.md
tests/: conftest.py  test_api.py  test_config.py  test_filter.py  test_filter_jittable.py  test_history_api.py  test_lifecycle.py  test_media.py  test_top_level_api.py
tests/benchmark/: benchmark_logger.py
tests/core/: test_api.py  test_boundlogger.py  test_dedicated_host.py  test_goggles_client.py  test_hang_resilience.py  test_logger.py  test_resilience.py  test_routing.py  test_run_wandb.py  test_transport.py
tests/core/integrations/: test_console.py  test_jsonl.py  test_logging_isolation.py  test_step_guard.py  test_storage.py  test_wandb.py
tests/core/metrics/: test_event.py  test_materializer.py  test_queue.py
tests/core/run/: test_run_basic.py  test_run_console.py  test_run_filelogs.py  test_run_jsonl.py  test_run_lifecycle.py  test_run_logging_flags.py  test_run_wandb.py  test_wandb_artifacts.py
tests/history/: test_buffer.py  test_init.py  test_jit.py  test_spec.py  test_utils.py
