[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-goggles"
version = "0.1.9"
authors = [
    { name = "Antonio Terpin", email = "aterpin@ethz.ch" },
    { name = "Francesco Banelli", email = "fbanelli@ethz.ch" },
]
description = "Observability framework for robotics research"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["robotics", "logging", "observability", "jax", "wandb", "experiment-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
]
dependencies = [
    "ruamel.yaml",
    "rich",
    "portal>=3.7.3",
    "typing-extensions>=4.15.0",
    "netifaces>=0.11.0",
    "pyyaml>=6.0.3",
    "numpy>=1.23",
    "imageio>=2.37.0",
    "matplotlib>=3.10.7",
]

[project.urls]
Homepage = "https://github.com/antonioterpin/goggles"
Repository = "https://github.com/antonioterpin/goggles"
Documentation = "https://github.com/antonioterpin/goggles#readme"
Issues = "https://github.com/antonioterpin/goggles/issues"

[tool.setuptools.packages.find]
include = ["goggles*"]
exclude = ["wandb*", "tests*", "examples*"]

[project.optional-dependencies]
# Development and examples
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.0.0",
    "snowballstemmer==2.2.0",
    "pre_commit==4.0.1",
    "tomli",
    "pyupgrade>=3.19.0",
    "psutil",
]
# Optional JAX-based GPU history subsystem
jax = [
    "jax>=0.4.3",
    "jaxlib>=0.4.3",
]
# Optional W&B integration
wandb = [
    "wandb[media]",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
        "-ra",
        "--strict-markers",
        "--strict-config",
        "--cov=goggles",
        "--cov-branch",
        "--cov-report=term-missing",
        "--cov-report=html",
        "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["goggles"]
markers = [
        "resilience: marks tests as resilience tests (slow, disruptive)",
        "xdist_group: ensures tests run in the same group (serial execution within group)",
]
filterwarnings = [
        "error",
        "ignore::UserWarning",
        "ignore::DeprecationWarning",
]

# Ruff configuration for linting and modern typing enforcement
[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (including unused imports F401)
    "UP",     # pyupgrade (modern typing patterns)
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
]

# Specific rules for modern typing enforcement
[tool.ruff.lint.pyupgrade]
# Keep this empty to use all pyupgrade rules

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR2004"]  # Ignore docstring rules in tests
"examples/*" = ["D"]          # Ignore docstring rules in examples

[tool.ruff.lint.pydocstyle]
convention = "google"
