[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-goggles"
version = "0.1.9"
authors = [
    { name = "Antonio Terpin", email = "aterpin@ethz.ch" },
    { name = "Francesco Banelli", email = "fbanelli@ethz.ch" },
]
description = "Observability framework for robotics research"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["robotics", "logging", "observability", "jax", "wandb", "experiment-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
]
dependencies = [
    "ruamel.yaml",
    "rich",
    "portal>=3.7.3",
    "typing-extensions>=4.15.0",
    "netifaces>=0.11.0",
    "pyyaml>=6.0.3",
    "numpy>=1.23",
    "imageio>=2.37.0",
    "matplotlib>=3.10.7",
    "basedpyright",
    "pydoclint>=0.8.3",
]

[project.urls]
Homepage = "https://github.com/antonioterpin/goggles"
Repository = "https://github.com/antonioterpin/goggles"
Documentation = "https://github.com/antonioterpin/goggles#readme"
Issues = "https://github.com/antonioterpin/goggles/issues"

[tool.setuptools.packages.find]
include = ["goggles*"]
exclude = ["wandb*", "tests*", "examples*"]

[project.optional-dependencies]
# Development and examples
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.0.0",
    "snowballstemmer==2.2.0",
    "pre_commit==4.0.1",
    "tomli",
    "pyupgrade>=3.19.0",
    "psutil",
]
# Optional JAX-based GPU history subsystem
jax = [
    "jax>=0.4.3",
    "jaxlib>=0.4.3",
]
# Optional W&B integration
wandb = [
    "wandb[media]",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
        "-ra",
        "--strict-markers",
        "--strict-config",
        "--cov=goggles",
        "--cov-branch",
        "--cov-report=term-missing",
        "--cov-report=html",
        "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["goggles"]
markers = [
        "resilience: marks tests as resilience tests (slow, disruptive)",
        "xdist_group: ensures tests run in the same group (serial execution within group)",
]
filterwarnings = [
        "error",
        "ignore::UserWarning",
        "ignore::DeprecationWarning",
]


# Ruff configuration for linting and modern typing enforcement
[tool.ruff]
line-length = 80
target-version = "py310"
exclude = ["tests"]

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",     # pycodestyle errors (style/formatting)
    "W",     # pycodestyle warnings
    "F",     # pyflakes (logical errors)
    "UP",    # pyupgrade (modern Python syntax)
    "I",     # isort (import sorting)
    "N",     # pep8-naming (naming conventions)
    "B",     # flake8-bugbear (potential bugs)
    "PL",    # pylint (code quality)
    "RUF",   # ruff-specific rules
]

# NOTE: issue #229 proposes to remove ignore
# PLR0912 and
# PLR0915
# They are good checks in principle but stil hard to
# respect at the moment
ignore = [
    "PLR2004", # Magic value used in comparison
    "PLR0913", # Too many arguments in function definition
    "N803",    # Argument name should be lowercase (CV standard Ix, Iy, ecc.)
    "N806",    # Variable in function should be lowercase (CV standard Ix, Iy, ecc.)
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR0911", # Too many return statements
]

# Pydoclint configuration
# Pydoclint is used together with Ruff because
# Ruff hasn't yet implemented all the checks that Pydoclint provides.
# The plan is to migrate to Ruff only when all checks are implemented.
[tool.pydoclint]
style = "google"
skip-checking-short-docstrings = false
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false
skip-checking-raises = false

# Pyright configuration for type checking
# We use basedpyright but in this way pylance also
# reads this configuration
[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
include = ["goggles"]

reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

reportUnusedImport = false
reportUnusedVariable = false

enableTypeIgnoreComments = false
reportIgnoreCommentWithoutRule = "error"
reportUnnecessaryTypeIgnoreComment = "error"
