[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robo-goggles"
version = "0.1.9"
authors = [
    { name = "Antonio Terpin", email = "aterpin@ethz.ch" },
    { name = "Francesco Banelli", email = "fbanelli@ethz.ch" },
]
description = "Observability framework for robotics research"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["robotics", "logging", "observability", "jax", "wandb", "experiment-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
dependencies = [
    "ruamel.yaml",
    "rich",
    "typing-extensions>=4.15.0",
    "numpy>=1.23",
    "imageio>=2.37.0",
    "matplotlib>=3.10.7",
]

[project.urls]
Homepage = "https://github.com/antonioterpin/goggles"
Repository = "https://github.com/antonioterpin/goggles"
Documentation = "https://github.com/antonioterpin/goggles#readme"
Issues = "https://github.com/antonioterpin/goggles/issues"

[tool.setuptools.packages.find]
include = ["goggles*"]
exclude = ["wandb*", "tests*", "examples*"]

[tool.setuptools.package-data]
goggles = ["py.typed"]

[project.optional-dependencies]
# Development and examples
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "hypothesis>=6.0.0",
    "snowballstemmer==2.2.0",
    "pre_commit==4.0.1",
    "tomli",
    "pyupgrade>=3.19.0",
    "psutil",
    "hydra-core>=1.3.2",
    "basedpyright",
    "pydoclint>=0.8.3",
]
# Optional JAX-based GPU history subsystem
jax = [
    "jax>=0.4.3",
    "jaxlib>=0.4.3",
]
# Optional W&B integration
wandb = [
    "wandb[media]",
    "plotly>=5.20.0",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
        "-ra",
        "--strict-markers",
        "--strict-config",
        "--cov=goggles",
        "--cov-branch",
        "--cov-report=term-missing",
        "--cov-report=html",
        "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["goggles"]
markers = [
        "resilience: marks tests as resilience tests (slow, disruptive)",
        "xdist_group: ensures tests run in the same group (serial execution within group)",
        "slow: marks tests that exercise external integrations (e.g. wandb offline mode)",
]
filterwarnings = [
        "error",
        "ignore::UserWarning",
        "ignore::DeprecationWarning",
]


# Ruff configuration for linting and modern typing enforcement
[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",      # pycodestyle errors (style/formatting)
    "W",      # pycodestyle warnings
    "W505",   # doc-line-too-long (opt-in, paired with max-doc-length)
    "F",      # pyflakes (logical errors)
    "UP",     # pyupgrade (modern Python syntax)
    "I",      # isort (import sorting)
    "N",      # pep8-naming (naming conventions)
    "B",      # flake8-bugbear (potential bugs)
    "D",      # pydocstyle (Google-style docstrings)
    "PL",     # pylint (code quality)
    "PGH003", # blanket type: ignore
    "RUF",    # ruff-specific rules (includes RUF100 for unused noqa)
]

# NOTE: PLR0913 (too many arguments) is kept on purpose — the public
# logger protocol methods are kwarg-heavy by design. PLR0911/PLR0912/
# PLR0915 from #117 have been cleared.
ignore = [
    "PLR2004", # Magic value used in comparison
    "PLR0913", # Too many arguments in function definition
    "N803",    # Argument name should be lowercase (CV standard Ix, Iy, ecc.)
    "N806",    # Variable in function should be lowercase (CV standard Ix, Iy, ecc.)
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__ (documented at class level)
]

# Ensure unused/incorrect noqa comments are detected (similar to pyright's strictness)
# RUF100 is already included via "RUF" above, but we want to ensure it's not accidentally ignored

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PLR2004"]  # Tests: no docstring policy, allow magic values
"examples/*" = ["D"]           # Examples: documented via README/comments
"**/__init__.py" = ["D"]       # Package stubs often re-export only

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["__post_init__"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-line-length = 80
max-doc-length = 80

# Pydoclint configuration
# Pydoclint is used together with Ruff because
# Ruff hasn't yet implemented all the checks that Pydoclint provides.
# The plan is to migrate to Ruff only when all checks are implemented.
[tool.pydoclint]
style = "google"
skip-checking-short-docstrings = false
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false
skip-checking-raises = false
# Match the ruff per-file-ignore policy: tests and examples are
# documented via comments/READMEs, not Google-style docstrings.
exclude = '\.git|\.tox|tests/.*|examples/.*'

# Pyright configuration for type checking
# We use basedpyright but in this way pylance also
# reads this configuration
[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.10"
include = ["goggles", "tests", "examples"]

reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

reportUnusedImport = false
reportUnusedVariable = false

enableTypeIgnoreComments = false
reportIgnoreCommentWithoutRule = "error"
reportUnnecessaryTypeIgnoreComment = "error"

